# python-cloud-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  RELEASE-NOTES.md  config.json  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
.github/actions/check-docker-containers/: action.yml
.github/actions/docker-check-containers/: action.yml
.github/actions/docker-server-health/: action.yml
.github/actions/setup-node/: action.yml
.github/actions/setup-python/: action.yml
.github/actions/setup-python-core/: action.yml
.github/actions/setup-python-dev/: action.yml
.github/workflows/: build.yml  ci.yml  docker.yml
configuration/: cloud_server_config.json  config.json
docs/: API.md  DOCKER_DEPLOYMENT.md  SMG.md  WORKFLOWS.md
docs/source/: index.rst
grafana/: README.md
grafana/dashboards/: authentication-metrics.json  health-metrics.json  rate-limiting-metrics.json
grafana/provisioning/dashboards/: dashboards.yml
prometheus/: prometheus.yml
python-cloud-server-frontend/: next.config.ts  package-lock.json  package.json
python-cloud-server-frontend/src/app/: layout.tsx  not-found.tsx
python-cloud-server-frontend/src/app/drive/: page.tsx
python-cloud-server-frontend/src/app/login/: page.tsx
python-cloud-server-frontend/src/components/: Footer.tsx  Navigation.tsx
python-cloud-server-frontend/src/components/__tests__/: Footer.test.tsx  Navigation.test.tsx
python-cloud-server-frontend/src/components/drive/displays/: FileDisplayWrapper.tsx  ImageDisplay.tsx  MusicDisplay.tsx  TextDisplay.tsx  VideoDisplay.tsx
python-cloud-server-frontend/src/components/drive/displays/__tests__/: DisplayComponents.test.tsx  FileDisplayWrapper.test.tsx
python-cloud-server-frontend/src/components/drive/previews/: FolderPreview.tsx  ImagePreview.tsx  MusicPreview.tsx  PreviewGrid.tsx  PreviewItem.tsx  TextPreview.tsx  VideoPreview.tsx
python-cloud-server-frontend/src/components/drive/previews/__tests__/: PreviewComponents.test.tsx  PreviewGrid.test.tsx  PreviewItem.test.tsx
python-cloud-server-frontend/src/contexts/: AuthContext.tsx
python-cloud-server-frontend/src/lib/: api.ts  auth.ts  types.ts
python-cloud-server-frontend/src/lib/__tests__/: api.test.ts  auth.test.ts  file-api.test.ts
python_cloud_server/: __init__.py  authentication_handler.py  certificate_handler.py  cloud_server.py  config.py  constants.py  main.py  metadata.py  models.py  server.py  template_server.py  thumbnails.py
python_cloud_server/middleware/: request_logging_middleware.py  security_headers_middleware.py
release/: install_cloud_server.sh
tests/: conftest.py  test_authentication_handler.py  test_certificate_handler.py  test_cloud_server.py  test_config.py  test_main.py  test_metadata.py  test_models.py  test_server.py  test_template_server.py  test_thumbnails.py
tests/middleware/: test_request_logging_middleware.py  test_security_headers_middleware.py
